--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<div class="container-fluid">
+  <div class="jumbotron">
 <div style="text-align:center">
-  <h1>
-    Github Search
-  </h1>
+  <h1>Github Search</h1>
+  </div>
 </div>
+<app-my-profile></app-my-profile>
 <router-outlet></router-outlet>
+<div>
