--- a/src/app/my-profile/my-profile.component.css
+++ b/src/app/my-profile/my-profile.component.css
@@ -3,3 +3,21 @@
   font-family: monospace;
   font-weight: bold;
 }
+img{
+  border-radius: 10px;
+}
+.panel-body{
+  border:0.5px solid grey;
+  border-radius: 10px;
+  padding:10px;
+  margin-bottom: 10px;
+}
+.names{
+  font-size: 30px;
+  font-weight: bolder;
+  font-family: monospace;
+  margin-left: 5px;
+}
+.list-group-items{
+  margin-left: 5px;
+}
