Create a search form to search other peoples github accounts

--- a/src/app/my-profile/my-profile.component.css
+++ b/src/app/my-profile/my-profile.component.css
@@ -2,3 +2,12 @@
 img{
   border-radius: 10px;
 }
+.names{
+  font-size: 30px;
+  font-weight: bolder;
+  font-family: monospace;
+  margin-left: 5px;
+}
+.col-sm-5{
+  margin-left: 10px;
+}
