--- a/src/app/repos/repos.component.css
+++ b/src/app/repos/repos.component.css
@@ -1,7 +1,7 @@
 .panel-body{
   border:0.5px solid grey;
-  border-radius: 10px;
-  padding:10px;
+  border-radius: 6px;
+  padding:5px;
   margin-bottom: 10px;
 }
 .names{
@@ -17,4 +17,8 @@
   font-size: 20px;
   font-family: monospace;
   font-weight: bold;
+}
+.description{
+  font-family: URW Chancery L, cursive;
+  font-size: 20px;
 }
