--- a/src/app/search-form/search-form.component.html
+++ b/src/app/search-form/search-form.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+
   <form (ngSubmit)="submitUser(name)" #userForm="ngForm">
     <div class="form-group">
       <div class="col-sm-10">
@@ -6,4 +6,56 @@
       </div>
     </div>
   </form>
-</div>
+
+<div *ngIf="user">
+      <div class="row">
+        <div class="col-sm-3">
+          <img src="{{user.avatar_url}}" class="img-circle" alt="">
+          <ul class="list-group" id="email">
+            <p class="names"><span class="glyphicon glyphicon-user"></span>  {{user.login}} <small>{{user.name}}</small></p>
+            <li class="list-group-item" *ngIf="user.email" id="emailocation">Email-Address: <a href="{{user.email}}" target="_blank"> {{user.email}} </a></li>
+            <li class="list-group-item" *ngIf="user.location" id="emailocation">Location: <b>{{user.location}}</b></li>
+            <li class="list-group-item" *ngIf="user.created_at" id="emailocation">Account created on: <b>{{user.created_at | date}}</b></li>
+          </ul>
+        </div>
+        <div class="col-md-2">
+
+        </div>
+        <div class="col-sm-5" id="repos-part">
+          <div>
+            <p>
+              <span class="label label-info" id="labels">{{user.followers}} Followers</span>
+              &nbsp;
+              <span class="label label-warning" id="labels">{{user.following}} Following</span>
+              &nbsp;
+              <span class="label label-danger" id="labels">{{user.public_repos}} Repositories</span>
+              &nbsp;
+
+            </p>
+            <br>
+            <p><a href="{{user.html_url}}" target="_blank" class="btn btn-success btn-sm" id="view"> View profile on Github &nbsp; <span class="glyphicon glyphicon-share-alt"></span></a></p>
+            <div class="panel panel-success panel">
+              <div class="panel-heading heading">
+                <h3 class="panel-title" class="repos">Repositories</h3>
+              </div>
+              <div class="panel-body" *ngFor="let repo of repositoryService.repo ; let i = index">
+                <p class="clearfix">
+                  <span class="repository"> {{repositoryService.repo[i].name}} </span>
+                </p>
+                <p class="description">{{repositoryService.repo[i].description}}</p>
+
+                <p class="creation-date"><b class="dates">Date created:</b> &nbsp;  {{repositoryService.repo[i].created_at|date}}</p>
+
+                <p class="update-date"><b class="dates">Updated on:</b> &nbsp;   <b>{{repositoryService.repo[i].updated_at|date}}</b></p>
+
+                <a href="{{repositoryService.repo[i].html_url}}" target="_blank" class="btn btn-sm btn-danger ">View this project on Github &nbsp;<span class="glyphicon glyphicon-share-alt"></span></a>
+                <br>
+
+                <a href="{{repositoryService.repo[i].homepage}}" target="_blank" *ngIf="repositoryService.repo[i].homepage" class="btn btn-sm btn-success pull-right buttons">View Deployed Page &nbsp;<span class="glyphicon glyphicon-share-alt"></span></a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+  </div>
