Set the landing page to be my profile on github

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,12 @@
-<!--The content below is only a placeholder and can be replaced.-->
+<h1>Github Searcher</h1>
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
 
-      <a class="navbar-brand" href="#">Github Search</a><br>
+    <div class="navbar-heading">
+      <a class="navbar-brand" href="#">Github Search</a>
+   </div>
 
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-      <li><a routerLink='/search-form' routerLinkActive='active'>Search</a></li>
-       <li><a routerLink='/my-profile' routerLinkActive='active'>My profile</a></li><br>
+      <a routerLink='/my-profile' routerLinkActive='active'>My Profile</a>
 
   </div>
 </nav>
