--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -1,7 +1,11 @@
-
+<div class="container-fluid">
+<div class="search">
+<button class="btn btn-success"><a routerLink='/search-form' routerLinkActive='active'>Search an account</a></button>
+</div>
 <div *ngIf="user">
       <div class="row">
-        <div class="col-sm-3">
+        <div class="col-md-3">
+
           <img src="{{user.avatar_url}}" class="img-circle" alt="">
           <ul class="list-group" id="email">
             <p class="names"><span class="glyphicon glyphicon-user"></span>  {{user.login}} <small>{{user.name}}</small></p>
@@ -9,8 +13,9 @@
             <li class="list-group-item" *ngIf="user.location" id="emailocation">Location: <b>{{user.location}}</b></li>
             <li class="list-group-item" *ngIf="user.created_at" id="emailocation">Account created on: <b>{{user.created_at | date}}</b></li>
           </ul>
+        
         </div>
-        <div class="col-sm-2">
+        <div class="col-md-2">
 
         </div>
         <div class="col-sm-5" id="repos-part">
@@ -32,3 +37,4 @@
         </div>
       </div>
   </div>
+</div>
