--- a/src/app/search-form/search-form.component.html
+++ b/src/app/search-form/search-form.component.html
@@ -1,61 +1,66 @@
-
+<div class="container-fluid">
   <form (ngSubmit)="submitUser(name)" #userForm="ngForm">
     <div class="form-group">
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="inputtext" id="input" placeholder="Enter Github username" [(ngModel)]="newSearch.name" name="name" (keyup)= "submitUser(name)" #name='ngModel'>
+        <input type="text" class="form-control" id="inputtext" id="input" placeholder="Enter Github username" [(ngModel)]="newSearch.name" name="name"  #name='ngModel'>
+
+        <button id="submit" class="btn btn-primary" (click)='submitUser(name)'>Search</button>
       </div>
     </div>
   </form>
-
+</div>
 <div *ngIf="user">
+
+      <p class="names"><span class="glyphicon glyphicon-user"></span> &nbsp; {{user.login}} &nbsp;<small>{{user.name}}</small></p>
+
+    <div class="panel-body" id="body">
       <div class="row">
         <div class="col-sm-3">
           <img src="{{user.avatar_url}}" class="img-circle" alt="">
+        </div>
+        <div class="col-sm-3">
           <ul class="list-group" id="email">
-            <p class="names"><span class="glyphicon glyphicon-user"></span>  {{user.login}} <small>{{user.name}}</small></p>
             <li class="list-group-item" *ngIf="user.email" id="emailocation">Email-Address: <a href="{{user.email}}" target="_blank"> {{user.email}} </a></li>
             <li class="list-group-item" *ngIf="user.location" id="emailocation">Location: <b>{{user.location}}</b></li>
             <li class="list-group-item" *ngIf="user.created_at" id="emailocation">Account created on: <b>{{user.created_at | date}}</b></li>
           </ul>
         </div>
-        <div class="col-md-2">
-
-        </div>
-        <div class="col-sm-5" id="repos-part">
+        <div class="col-sm-4" id="repos-part">
           <div>
             <p>
-              <span class="label label-info" id="labels">{{user.followers}} Followers</span>
+              <span  id="labels">{{user.followers}} Followers</span>
               &nbsp;
-              <span class="label label-warning" id="labels">{{user.following}} Following</span>
+              <span  id="labels">{{user.following}} Following</span>
               &nbsp;
-              <span class="label label-danger" id="labels">{{user.public_repos}} Repositories</span>
+              <span  id="labels">{{user.public_repos}} Repositories</span>
               &nbsp;
 
             </p>
             <br>
             <p><a href="{{user.html_url}}" target="_blank" class="btn btn-success btn-sm" id="view"> View profile on Github &nbsp; <span class="glyphicon glyphicon-share-alt"></span></a></p>
-            <div class="panel panel-success panel">
-              <div class="panel-heading heading">
+
+
                 <h3 class="panel-title" class="repos">Repositories</h3>
-              </div>
+
               <div class="panel-body" *ngFor="let repo of repositoryService.repo ; let i = index">
                 <p class="clearfix">
                   <span class="repository"> {{repositoryService.repo[i].name}} </span>
                 </p>
                 <p class="description">{{repositoryService.repo[i].description}}</p>
 
-                <p class="creation-date"><b class="dates">Date created:</b> &nbsp;  {{repositoryService.repo[i].created_at|date}}</p>
+                <p class="creation-date"><b class="dates">Date created:</b> &nbsp;  <b>{{repositoryService.repo[i].created_at|date}}</b></p>
 
                 <p class="update-date"><b class="dates">Updated on:</b> &nbsp;   <b>{{repositoryService.repo[i].updated_at|date}}</b></p>
 
-                <a href="{{repositoryService.repo[i].html_url}}" target="_blank" class="btn btn-sm btn-danger ">View this project on Github &nbsp;<span class="glyphicon glyphicon-share-alt"></span></a>
+                <a href="{{repositoryService.repo[i].html_url}}" target="_blank" class="btn btn-sm btn-danger pull-right buttons">View this project on Github &nbsp;<span class="glyphicon glyphicon-share-alt"></span></a>
+                <br>
                 <br>
 
                 <a href="{{repositoryService.repo[i].homepage}}" target="_blank" *ngIf="repositoryService.repo[i].homepage" class="btn btn-sm btn-success pull-right buttons">View Deployed Page &nbsp;<span class="glyphicon glyphicon-share-alt"></span></a>
               </div>
-            </div>
 
           </div>
         </div>
       </div>
+    </div>
   </div>
