--- a/src/app/search-form/search-form.component.css
+++ b/src/app/search-form/search-form.component.css
@@ -8,10 +8,11 @@ img{
   margin-top: 5px;
 }
 .panel-body{
-  border:0.5px solid grey;
+  
   border-radius: 6px;
   padding:5px;
   margin-bottom: 10px;
+  padding: 10px;
 }
 .names{
   font-size: 30px;
