--- a/src/app/search-form/search-form.component.css
+++ b/src/app/search-form/search-form.component.css
@@ -8,7 +8,7 @@ img{
   margin-top: 5px;
 }
 .panel-body{
-  
+  border: 1px solid grey;
   border-radius: 6px;
   padding:5px;
   margin-bottom: 10px;
