--- a/src/app/repos/repos.component.html
+++ b/src/app/repos/repos.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-success panel">
   <div class="panel-heading heading">
-    <h3 class="panel-title" class="repos">Repositories</h3>
+    <h3>Repositories</h3>
   </div>
   <div class="panel-body" *ngFor="let repo of repositoryService.repo ; let i = index">
     <p class="clearfix">
@@ -10,11 +10,8 @@
 
     <p class="creation-date"><b class="dates">Date created:</b> &nbsp;  {{repositoryService.repo[i].created_at|date}}</p>
 
-    <p class="update-date"><b class="dates">Updated on:</b> &nbsp;   <b>{{repositoryService.repo[i].updated_at|date}}</b></p>
-
-    <a href="{{repositoryService.repo[i].html_url}}" target="_blank" class="btn btn-sm btn-danger ">View this project on Github &nbsp;<span class="glyphicon glyphicon-share-alt"></span></a>
-    <br>
-
-    <a href="{{repositoryService.repo[i].homepage}}" target="_blank" *ngIf="repositoryService.repo[i].homepage" class="btn btn-sm btn-success pull-right buttons">View Deployed Page &nbsp;<span class="glyphicon glyphicon-share-alt"></span></a>
+  <p>  <a href="{{repositoryService.repo[i].html_url}}" target="_blank" class="btn1 ">View this project on Github &nbsp;<span class="glyphicon glyphicon-share-alt"></span></a>
+    
+    <a href="{{repositoryService.repo[i].homepage}}" target="_blank" *ngIf="repositoryService.repo[i].homepage" class="btn btn-sm btn-success pull-right buttons">View Deployed Page &nbsp;<span class="glyphicon glyphicon-share-alt"></span></a></p>
   </div>
 </div>
