--- a/src/app/repos/repos.component.css
+++ b/src/app/repos/repos.component.css
@@ -22,3 +22,17 @@
   font-family: URW Chancery L, cursive;
   font-size: 20px;
 }
+h3{
+  font-size: 40px;
+  text-align: center;
+  background-color:#F0FFF0;
+  width:100%;
+  padding:10px;
+}
+.btn1{
+  background-color: #B0E0E6;
+  padding:7px;
+  border-radius: 5px;
+  margin:5px;
+  color:black;
+}
