--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -7,7 +7,7 @@
   <br>
   <form action="">
     <div class="form-group">
-      <app-search-form></app-search-form>
+    
     </div>
     <br>
     <div id="userprofile">
@@ -38,23 +38,26 @@
               <li class="list-group-item" *ngIf="user.created_at" id="emailocation">Account created on: <b>{{user.created_at | date}}</b></li>
             </ul>
           </div>
-          <div class="col-sm-4" id="repos-part">
-            <div>
-              <p>
-                <span class="label label-info" id="labels">{{user.followers}} Followers</span>
+          <div class="col-sm-5" id="repo-part">
+
+
+                <span  id="labels">{{user.followers}} Followers</span><br><br>
                 &nbsp;
-                <span class="label label-warning" id="labels">{{user.following}} Following</span>
+                <span  id="labels">{{user.following}} Following</span><br><br>
                 &nbsp;
-                <span class="label label-danger" id="labels">{{user.public_repos}} Repositories</span>
+                <span  id="labels">{{user.public_repos}} Repositories</span><br>
                 &nbsp;
 
-              </p>
+              <br>
               <br>
               <p><a href="{{user.html_url}}" target="_blank" class="btn btn-success btn-sm" id="view"> View profile on Github &nbsp; <span class="glyphicon glyphicon-share-alt"></span></a></p>
-              <br>
+
+
+
+          </div>
               <div class="panel panel-success panel">
                 <div class="panel-heading heading">
-                  <h3 class="panel-title" class="repos">Repositories</h3>
+                  <h3>Repositories</h3>
                 </div>
                 <div class="panel-body" *ngFor="let repo of repositoryService.repo ; let i = index">
                   <p class="clearfix">
@@ -74,10 +77,8 @@
                 </div>
               </div>
             </div>
-          </div>
+
         </div>
       </div>
     </div>
   </div>
-
-</div>
