--- a/src/app/repos/repos.component.css
+++ b/src/app/repos/repos.component.css
@@ -28,6 +28,7 @@ h3{
   background-color:#F0FFF0;
   width:100%;
   padding:10px;
+  font-family: Georgia, serif;
 }
 .btn1{
   background-color: #B0E0E6;
