--- a/src/app/search-form/search-form.component.html
+++ b/src/app/search-form/search-form.component.html
@@ -2,7 +2,7 @@
   <form (ngSubmit)="submitUser(name)" #userForm="ngForm">
     <div class="form-group">
       <div class="col-sm-10">
-      <p>  <input type="text" class="form-control" id="inputtext" id="input" placeholder="Enter Github username" [(ngModel)]="newSearch.name" name="name" keyUp="submitUser(name)" #name='ngModel'>
+      <p>  <input type="text" class="form-control" id="inputtext" id="input" placeholder="Enter Github username" [(ngModel)]="newSearch.name" name="name" keyUp="submitUser(name)" #name='ngModel'><br>
         <button id="submit" class="btn btn-primary" (click)='submitUser(name)'>Search</button>
         </p>
       </div>
@@ -16,7 +16,7 @@
       <div class="row">
 
         <div class="col-sm-3">
-          <img src="{{user.avatar_url}}" class="img-circle" alt="">
+          <img src="{{user.avatar_url}}" class="img-circle" alt=""><br>
           <li class="list-group-item" *ngIf="user.created_at" id="emailocation">Account created on: <b>{{user.created_at | date}}</b></li>
           <li class="list-group-item" *ngIf="user.email" id="emailocation">Email-Address: <a href="{{user.email}}" target="_blank"> {{user.email}} </a></li>
           <li class="list-group-item" *ngIf="user.location" id="emailocation">Location: <b>{{user.location}}</b></li>
